fixed overflow issue on appointments page

--- a/src/main/resources/static/css/profile/appointments.css
+++ b/src/main/resources/static/css/profile/appointments.css
@@ -27,7 +27,6 @@ h2 {
     background-color: #ffffff;
     border: 5px solid #e4ffb5;
     border-radius: 8px;
-    min-height: 300px;
     margin-bottom: 20px;
     padding: 20px;
 }
